# AI_Toolkit_Hub

./: .env.example  .gitignore  CLAUDE_MEMORY.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
examples/: pipeline_demo.py
modules/AI_Image/: DALLE.py  FLUX.py  StableDiffusion.py  __init__.py
modules/AI_Video/: KlingAI.py  RunwayML.py  VideoAnalysis.py  __init__.py
modules/LLMs/: ClaudeAI.py  GeminiAI.py  GroqAI.py  OllamaAI.py  OpenAI.py  __init__.py
modules/Map/: GoogleMaps.py  OpenStreetMap.py  __init__.py
modules/OCRs/: EasyOCR.py  GoogleVision.py  Tesseract.py  __init__.py
modules/QR_Generate/: QRCode.py  Segno.py  __init__.py
modules/Short_Link/: Bitly.py  Rebrandly.py  TinyURL.py  __init__.py
modules/TTS/: EdgeTTS.py  ElevenLabs.py  GoogleTTS.py  __init__.py
modules/Transcribe/: AssemblyAI.py  Deepgram.py  Whisper.py  __init__.py
modules/Translate/: DeepL.py  GoogleTranslate.py  LLMTranslate.py  __init__.py
modules/Video_Downloader/: YtDlp.py  __init__.py
tests/AI_Image/: test_dalle.py
tests/LLMs/: test_claude.py  test_groq.py  test_ollama.py  test_openai.py
tests/Map/: test_google_maps.py  test_openstreetmap.py
tests/OCRs/: test_easyocr.py  test_tesseract.py
tests/QR_Generate/: test_qrcode.py  test_segno.py
tests/Short_Link/: test_bitly.py
tests/TTS/: test_edge_tts.py  test_elevenlabs.py
tests/Transcribe/: test_assemblyai.py  test_whisper.py
tests/Translate/: test_deepl.py  test_llm_translate.py
utils/: __init__.py  config.py  helpers.py  logger.py
(+1 files in other folders)
