[project]
name = "ai-toolkit-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.25.0",
    "assemblyai>=0.29.0",
    "deepgram-sdk>=3.2.0",
    "deepl>=1.17.0",
    "easyocr>=1.7.0",
    "edge-tts>=6.1.9",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.25.2",
    "google-cloud-texttospeech>=2.16.0",
    "google-cloud-translate>=3.15.0",
    "google-cloud-vision>=3.4.0",
    "google-generativeai>=0.7.0",
    "googlemaps>=4.10.0",
    "groq>=0.9.0",
    "grpcio-status>=1.71.2",
    "mpmath>=1.3.0",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "protobuf>=5.29.6",
    "pydantic-core>=2.41.5",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "qrcode[pil]>=7.4.2",
    "requests>=2.31.0",
    "segno>=1.6.1",
    "setuptools>=82.0.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "yt-dlp>=2024.1.0",
]
